--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,6 @@
 <div>
-  Dashboard page
+  {{#each posts as |post|}}
+    {{>post}}
+  {{/each}}
 </div>
+{{!-- <script src="/js/dashboard.js"></script> --}}
