--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,1 +1,14 @@
-<script src="../public/js/add-post.js"></script>
+<!--<form>-->
+<div class="form-group">
+  <label for="post-title">Post Title</label>
+  <input type="text" class="form-control" id="post-title" />
+</div>
+
+<div class="form-group">
+  <label for="post-content">Post Content</label>
+  <textarea class="form-control" id="post-content" rows="3"></textarea>
+</div>
+<button type="submit" id="create-post" class="btn btn-primary">Create</button>
+<!--</form>-->
+
+<script src="/js/add-post.js"></script>
