Add page that shows pre-filled data for updating a post

--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -16,6 +16,12 @@
             onclick="deletePost({{id}})"
             class="btn btn-danger"
           >Delete</button>
+
+          <button
+            type="button"
+            onclick="updatePost({{id}})"
+            class="btn btn-warning"
+          >Update</button>
         </footer>
       </blockquote>
     </div>
