add comment functionality and comment handlebars, update and fix post functionality and handlebars

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,11 +4,24 @@
   {{/each}}
 
   <div>
-    <a href="/newpost"><button
+    <a href="/dashboard/post/new"><button
         id="button-new"
         type="button"
         class="btn btn-success"
       >+ New Post</button></a>
   </div>
 </div>
+{{!-- <div>
+  {{#each comment as |comment|}}
+    {{>comment}}
+  {{/each}}
+
+  <div>
+    <a href="/newcomment"><button
+        id="button-new"
+        type="button"
+        class="btn btn-success"
+      >+ New Comment</button></a>
+  </div>
+</div> --}}
 <script src="/js/dashboard.js"></script>
