--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,8 +1,8 @@
 <div class="post">
   <div class="card border border-dark p-2 m-2">
-    <div class="card-header">
-      {{title}}
-    </div>
+    <a href="/dashboard/post/{{id}}"><div class="card-header">
+        {{title}}
+      </div></a>
     <div class="card-body">
       <blockquote class="blockquote mb-0">
         <p>{{content}}</p>
