--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -5,7 +5,7 @@
 </div>
 
 <div class="form-group">
-  <label for="post-content">Post Content</label>
+  <label for="post-content">Post Comment</label>
   <textarea class="form-control" id="post-content" rows="3"></textarea>
 </div>
 <button type="submit" id="create-post" class="btn btn-primary">Create</button>
