--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,17 @@
-<div>
-  Login form
+<div class="login-form">
+  <form>
+    <div class="form-group">
+      <label for="inputUsername">Username</label>
+      <input type="text" class="form-control" id="username" />
+    </div>
+    <div class="form-group">
+      <label for="inputPassword">Password</label>
+      <input type="password" class="form-control" id="password" />
+    </div>
+
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  <a href="/singup">Are you new? Sign up instead!</a>
 </div>
+
+<script src="/js/login.js"></script>
