--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,3 +1,16 @@
-<div>
-  Sign up form
+<div class="signup-form">
+  <form>
+    <div class="form-group">
+      <label for="inputUsername">Username</label>
+      <input type="text" class="form-control" id="username" />
+    </div>
+    <div class="form-group">
+      <label for="inputPassword">Password</label>
+      <input type="password" class="form-control" id="password" />
+    </div>
+
+    <button type="submit" class="btn btn-primary">Sign Up</button>
+  </form>
 </div>
+
+<script src="/js/signup.js"></script>
