--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,16 +1,19 @@
 <div class="signup-form">
-  <form>
-    <div class="form-group">
-      <label for="inputUsername">Username</label>
-      <input type="text" class="form-control" id="username" />
-    </div>
-    <div class="form-group">
-      <label for="inputPassword">Password</label>
-      <input type="password" class="form-control" id="password" />
-    </div>
+  <div class="form-group">
+    <label for="inputUsername">Username</label>
+    <input type="text" class="form-control" id="username" />
+  </div>
+  <div class="form-group">
+    <label for="inputPassword">Password</label>
+    <input type="password" class="form-control" id="password" />
+  </div>
 
-    <button type="submit" class="btn btn-primary">Sign Up</button>
-  </form>
+  <input
+    type="button"
+    onclick="signupUser()"
+    class="btn btn-primary"
+    value="Signup"
+  />
 </div>
 
 <script src="/js/signup.js"></script>
