add readme content, improve footer UI

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,9 @@
         {{{body}}}
       </main>
       <footer>
-        This is a footer...
+        <div class="card-body card text-center bg-light">
+          <p class="card-text">© Tech Blog 2022</p>
+        </div>
       </footer>
     </div>
 
