fix logout route, fix displaying post titles, add cascade deletion of comments

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
     <div class="post">
       <div class="card border border-dark p-2 m-2">
         <div class="card-header">
-          {{post.title}}
+          {{title}}
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
