--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
     class="btn btn-primary"
     value="Login"
   />
-  <a href="/singup">Are you new? Sign up instead!</a>
+  <a href="/singup" class="sign-up-instead-link">Are you new? Sign up instead!</a>
 </div>
 
 <script src="/js/login.js"></script>
