--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,9 +2,9 @@
   {{#each posts}}
     <div class="post">
       <div class="card border border-dark p-2 m-2">
-        <div class="card-header">
-          {{title}}
-        </div>
+        <a href="/dashboard/post/{{id}}"><div class="card-header">
+            {{title}}
+          </div></a>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
             <p>{{content}}</p>
