Fix comments rendering

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -21,8 +21,7 @@
 
 {{#each post.comments as |comment|}}
   <hr />
-  {{comment.id}}
-  <div class="form-group">
+  <div class="form-group px-4">
     <label for="comment-text">{{comment.comment_text}}</label>
     <footer class="blockquote-footer">
       Commented by
@@ -34,15 +33,22 @@
   </div>
 {{/each}}
 <hr />
-<div class="form-group">
-  <label for="comment-text">Comment Text</label>
-  <textarea class="form-control" id="comment-text" rows="3"></textarea>
-</div>
+
+{{#if loggedIn}}
+  <div class="px-4">
+
+    <div class="form-group">
+      <label for="comment-text">Comment Text</label>
+      <textarea class="form-control" id="comment-text" rows="3"></textarea>
+    </div>
+    <input
+      type="button"
+      onclick="postComment({{post.id}})"
+      class="btn btn-primary"
+      value="Comment"
+    />
+  </div>
+{{/if}}
 <script src="/js/add-comment.js"></script>
-<input
-  type="button"
-  onclick="postComment({{post.id}})"
-  class="btn btn-primary"
-  value="Comment"
-/>
+
 <!--</form>-->
